2013-04-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/literalop.c,
	  support/regression/tests/bitwise.c: Fix host regression failues on
	  64-bit PowerPC
	* support/regression/tests/align.c: do not include stdalign.h on
	  hosts that do not support it

2013-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCicode.c,
	  src/SDCCval.h,
	  src/SDCCval.c,
	  src/port.h:
	  src/*/main.c:
	  doc/sdccman.lyx,
	  support/regression/tests/assert.c,
	  support/regression/tests/align.c:
	  Support for C11 _Static_assert static assertions and _Alignas alignment specifiers.

2013-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update manual.
	* src/SDCCmain.c:
	  Deprecation warning for --small-is-8bits.
	* device/include/assert.h:
	  Prepare for static assertions.
	* src/SDCCast.h:
	  Fix warning.

2013-03-30 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update and reorganize manual.
	* src/izt:
	  Kill i186 and tcls900h ports.

2013-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCC.y,
	  device/include/stdalign.h,
	  device/include/stddef.h,
	  device/include/stdnoreturn.h,
	  support/regression/tests/align.c:
	  Support for C11 _Alignof operator.

2013-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Use mlt for multiplication by constant in z180 port.
	* src/SDCCralloc.hpp:
	  Add comment to reference the paper on the register allocator.

2013-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix bug #2145.

2013-03-18 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/gen_known_bugs.pl: use http instead https since the
	  LWP::Protocol::https perl module seems not to be installed by default

2013-03-16 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt,