@@ -1,3 +1,13 @@
+2013-04-13 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCglobl.h,
+	  src/SDCCglue.c,
+	  src/SDCCmain.c,
+	  src/pic16/glue.c,
+	  src/z80/main.c,
+	  doc/sdccman.lyx:
+	  Remove option --main-return, make the behaviour previously invoked by --main-return the default.
+
 2013-04-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/regression/tests/literalop.c,
